--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zeronova-lab-mcp",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "MCP Server for ZERONOVA LAB tools — SEO audit, link checking, OGP validation, and more for AI agents",
   "type": "module",
   "main": "dist/index.js",
@@ -25,7 +25,10 @@
     "claude",
     "ogp",
     "link-checker",
-    "accessibility"
+    "accessibility",
+    "workflow",
+    "audit",
+    "seo-audit"
   ],
   "author": "Zeronova",
   "license": "MIT",
