feat: add check_security_headers + a11y + favicon (v0.3.0)
Phase 2.7: Security & Accessibility enhancement

- New Tier 1 tool: check_security_headers (6 headers with scoring)
- OGP checker: favicon detection (icon tags, apple-touch-icon, /favicon.ico)
- PageSpeed: color contrast violations (snippet + explanation)
- Tier 2 workflows: 6 new auto-verified items added
- 56 tests, all passing

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "zeronova-lab-mcp",
-  "version": "0.3.0",
-  "description": "MCP Server for ZERONOVA LAB tools — SEO audit, link checking, OGP validation, and more for AI agents",
+  "version": "0.4.0",
+  "description": "MCP Server for ZERONOVA LAB tools — SEO audit, link checking, OGP validation, config file generation, and more for AI agents",
   "type": "module",
   "main": "dist/index.js",
   "bin": {
@@ -28,7 +28,13 @@
     "accessibility",
     "workflow",
     "audit",
-    "seo-audit"
+    "seo-audit",
+    "robots-txt",
+    "sitemap",
+    "htaccess",
+    "json-ld",
+    "meta-tags",
+    "config-generator"
   ],
   "author": "Zeronova",
   "license": "MIT",
